--- a/content/plugins/mp6/components/color-schemes/schemes/_variables.scss
+++ b/content/plugins/mp6/components/color-schemes/schemes/_variables.scss
@@ -1,4 +1,4 @@
-// Assign default value to all undefined variables
+// assign default value to all undefined variables
 
 
 // core variables
@@ -11,6 +11,8 @@ $notification-color: #d54e21 !default;
 
 
 // global
+
+$body-background: #eee !default;
 
 $link: #0074a2 !default;
 $link-focus: lighten( $link, 10% ) !default;
@@ -29,6 +31,10 @@ $menu-highlight-text: $text-color !default;
 $menu-highlight-icon: $text-color !default;
 $menu-highlight-background: $highlight-color !default;
 
+$menu-current-text: $menu-highlight-text !default;
+$menu-current-icon: $menu-highlight-icon !default;
+$menu-current-background: $menu-highlight-background !default;
+
 $menu-submenu-text: mix( $base-color, $text-color, 30% ) !default;
 $menu-submenu-background: darken( $base-color, 7% ) !default;
 $menu-submenu-background-alt: desaturate( lighten( $menu-background, 7% ), 7% ) !default;
@@ -39,11 +45,15 @@ $menu-submenu-current-text: $text-color !default;
 $menu-bubble-text: $text-color !default;
 $menu-bubble-background: $notification-color !default;
 $menu-bubble-current-text: $text-color !default;
-$menu-bubble-current-background: darken( $base-color, 7% ) !default;
+$menu-bubble-current-background: $menu-submenu-background !default;
 
 $menu-collapse-text: $menu-icon !default;
 $menu-collapse-icon: $menu-icon !default;
 $menu-collapse-focus-text: $text-color !default;
 $menu-collapse-focus-icon: $menu-highlight-icon !default;
 
-$menu-avatar-frame: lighten( $menu-background, 7% ) !default;
+$adminbar-avatar-frame: lighten( $menu-background, 7% ) !default;
+$adminbar-input-background: lighten( $menu-background, 7% ) !default;
+
+$menu-customizer-text: mix( $base-color, $text-color, 40% ) !default;
+
