Update child theme header info

--- a/content/themes/snap_child/style.css
+++ b/content/themes/snap_child/style.css
@@ -1,14 +1,13 @@
 /**
- * Theme Name: Snap Child Theme
- * Theme URI: http://thethemefoundry.com/wordpress/snap-theme/
- * Author: The Theme Foundry
- * Author URI: http://thethemefoundry.com/
- * Description: A WordPress theme built for creatives.
+ * Theme Name: Jeremy's Snap
+ * Theme URI: http://jeremyfelt.com
+ * Author: Jeremy Felt
+ * Author URI: http://jeremyfelt.com
+ * Description: A child theme of Theme Foundry's Snap.
  * Version: 1.0
  * Template: snap
  * License: GNU General Public License
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
- * Tags: business, portfolio, professional, art, photography, clean, elegant, formal, handcrafted, light, minimal, gray, white, light, one-column, two-columns, three-columns, right-sidebar, responsive-width, custom-background, custom-colors, custom-menu, editor-style, featured-images, full-width-template, sticky-post, theme-options, infinite-scroll, translation-ready
  */
 
 @import url( 'http://fonts.googleapis.com/css?family=News+Cycle:400,700|Oxygen:400,700|Raleway:400,700' );
