--- a/content/themes/snap_child/style.css
+++ b/content/themes/snap_child/style.css
@@ -24,6 +24,10 @@ h1, blockquote {
 		font-size: 2.11111rem;
 	}
 
+	blockquote {
+		margin-left: -30px;
+	}
+
 	blockquote p {
 		font-size: 22px;
 		font-size: 1.22222rem;
