--- a/content/plugins/mp6/components/color-schemes/schemes/_admin.scss
+++ b/content/plugins/mp6/components/color-schemes/schemes/_admin.scss
@@ -20,11 +20,11 @@ a {
 	}
 }
 
-#rightnow a:hover, 
-#media-upload a.del-link:hover, 
-div.dashboard-widget-submit input:hover, 
-.subsubsub a:hover, 
-.subsubsub a.current:hover, 
+#rightnow a:hover,
+#media-upload a.del-link:hover,
+div.dashboard-widget-submit input:hover,
+.subsubsub a:hover,
+.subsubsub a.current:hover,
 .ui-tabs-nav a:hover {
 	color: $link-focus;
 }
@@ -40,7 +40,7 @@ input[type=radio]:checked:before {
     background: $form-checked;
 }
 
-.wp-core-ui input[type="reset"]:hover, 
+.wp-core-ui input[type="reset"]:hover,
 .wp-core-ui input[type="reset"]:active {
 	color: $link-focus;
 }
@@ -60,7 +60,7 @@ input[type=radio]:checked:before {
 	.mp6-text-primary {
 		color: $base-color;
 	}
-	
+
 	.mp6-highlight {
 		color: $menu-highlight-text;
 		background-color: $menu-highlight-background;
@@ -68,7 +68,7 @@ input[type=radio]:checked:before {
 	.mp6-text-highlight {
 		color: $menu-highlight-background;
 	}
-	
+
 	.mp6-notification {
 		color: $menu-bubble-text;
 		background-color: $menu-bubble-background;
@@ -76,7 +76,7 @@ input[type=radio]:checked:before {
 	.mp6-text-notification {
 		color: $menu-bubble-background;
 	}
-	
+
 	.mp6-text-icon {
 		color: $menu-icon;
 	}
@@ -90,9 +90,9 @@ input[type=radio]:checked:before {
 
 /* List tables */
 
-.wrap .add-new-h2:hover, 
+.wrap .add-new-h2:hover,
 #add-new-comment a:hover,
-.tablenav .tablenav-pages a:hover, 
+.tablenav .tablenav-pages a:hover,
 .tablenav .tablenav-pages a:focus {
 	color: $menu-text;
 	background-color: $menu-background;
@@ -175,7 +175,7 @@ strong .post-com-count span {
 #adminmenu a.wp-has-current-submenu:focus + .wp-submenu a,
 #adminmenu .wp-has-current-submenu.opensub .wp-submenu a {
 	color: $menu-submenu-text;
-	
+
 	&:focus, &:hover {
 		color: $menu-submenu-focus-text;
 	}
@@ -184,7 +184,7 @@ strong .post-com-count span {
 
 /* Admin Menu: current */
 
-#adminmenu .wp-submenu li.current a, 
+#adminmenu .wp-submenu li.current a,
 #adminmenu a.wp-has-current-submenu:focus + .wp-submenu li.current a,
 #adminmenu .wp-has-current-submenu.opensub .wp-submenu li.current a {
 	color: $menu-submenu-current-text;
@@ -348,6 +348,18 @@ ul#adminmenu > li.current > a.current:after {
 
 #wpadminbar #wp-admin-bar-user-info .display-name {
 	color: $menu-text;
+}
+
+
+/* Pointers */
+
+.wp-pointer .wp-pointer-content h3 {
+	background-color: $highlight-color;
+}
+
+.wp-pointer.wp-pointer-top .wp-pointer-arrow,
+.wp-pointer.wp-pointer-undefined .wp-pointer-arrow {
+	border-bottom-color: $highlight-color;
 }
 
 
