--- a/content/plugins/dashboard/css/quickdraft.css
+++ b/content/plugins/dashboard/css/quickdraft.css
@@ -14,8 +14,8 @@
 	padding: 8px 12px 0;
 }
 
-#dashboard_quick_draft .inside {
-	padding: 0;
+#dashboard-widgets .postbox .inside {
+	margin-bottom: 10px;
 }
 
 /* Form styling */
@@ -40,7 +40,7 @@ form.initial-form.quickpress-open input#title {
 	height: auto;
 }
 
-#dashboard_quick_draft input, 
+#dashboard_quick_draft input,
 #dashboard_quick_draft textarea {
 	box-sizing: border-box;
 	-moz-box-sizing:border-box;
@@ -173,7 +173,7 @@ form.initial-form.quickpress-open input#title {
 	height: auto;
 }
 
-#dashboard_quick_draft input, 
+#dashboard_quick_draft input,
 #dashboard_quick_draft textarea {
 	box-sizing: border-box;
 	-moz-box-sizing:border-box;
@@ -256,6 +256,7 @@ form.initial-form.quickpress-open input#title {
 #draft-list li {
 	margin-bottom: 1em;
 }
+
 #draft-list li time {
 	color: #bbb;
 }
